--- a/index.html
+++ b/index.html
@@ -1,12 +1,113 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
 <head>
-  <title>ProfitPilot</title>
-  <meta charset="utf-8">
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <title>ProfitPilot — Listing Risk & Profit Calculator</title>
+  <meta name="description" content="ProfitPilot helps sellers estimate profit, assess listing risk, and stress-test margins. 5-day free access. One-time unlock for PRO.">
+  <style>
+    :root{--bg:#0b0f14;--card:#111826;--card2:#0e1521;--txt:#eaf0ff;--muted:#9aa7bd;--line:rgba(255,255,255,.08);--accent:#5eead4;}
+    *{box-sizing:border-box} body{margin:0;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
+      background:radial-gradient(900px 500px at 20% 0%,rgba(94,234,212,.12),transparent 55%),
+                 radial-gradient(900px 500px at 80% 0%,rgba(99,102,241,.10),transparent 55%),var(--bg);
+      color:var(--txt)}
+    .wrap{max-width:1100px;margin:22px auto;padding:0 14px}
+    .nav{display:flex;justify-content:space-between;align-items:center;gap:10px;flex-wrap:wrap}
+    .brand{display:flex;gap:10px;align-items:center}
+    .logo{width:38px;height:38px;border-radius:12px;background:rgba(94,234,212,.12);border:1px solid rgba(94,234,212,.25);
+      display:flex;align-items:center;justify-content:center;font-weight:900}
+    .pill{padding:8px 10px;border-radius:999px;border:1px solid rgba(255,255,255,.10);background:rgba(255,255,255,.03);
+      font-size:12px;color:var(--muted)}
+    .btn{padding:10px 14px;border-radius:999px;border:1px solid rgba(255,255,255,.10);background:rgba(255,255,255,.03);
+      color:var(--txt);text-decoration:none;display:inline-flex;gap:8px;align-items:center}
+    .btn.primary{border-color:rgba(94,234,212,.35);background:rgba(94,234,212,.12)}
+    .hero{margin-top:16px;background:linear-gradient(180deg,rgba(94,234,212,.12),transparent 70%),var(--card);
+      border:1px solid var(--line);border-radius:18px;padding:18px}
+    h1{margin:0 0 8px;font-size:26px}
+    p{margin:0;color:var(--muted);line-height:1.5}
+    .grid{display:grid;grid-template-columns:1.2fr .8fr;gap:14px;margin-top:14px}
+    @media (max-width:980px){.grid{grid-template-columns:1fr}}
+    .card{background:var(--card);border:1px solid var(--line);border-radius:18px;padding:16px}
+    .list{margin:10px 0 0;padding-left:16px;color:var(--muted);line-height:1.6}
+    .small{font-size:12px;color:var(--muted);line-height:1.5}
+    .reviews{display:grid;gap:10px;margin-top:10px}
+    .review{border:1px solid var(--line);background:rgba(255,255,255,.03);border-radius:16px;padding:12px}
+    .meta{display:flex;justify-content:space-between;gap:10px;flex-wrap:wrap}
+    .tag{padding:6px 10px;border-radius:999px;border:1px solid rgba(255,255,255,.10);background:rgba(255,255,255,.03);
+      font-size:12px;color:var(--muted)}
+    footer{margin:14px 2px 0;color:var(--muted);font-size:12px;line-height:1.5}
+  </style>
 </head>
-<body style="font-family:system-ui; padding:40px;">
-  <h1>ProfitPilot</h1>
-  <p>Loading the app…</p>
+<body>
+<div class="wrap">
+
+  <div class="nav">
+    <div class="brand">
+      <div class="logo">PP</div>
+      <div>
+        <div style="font-weight:900">ProfitPilot</div>
+        <div class="pill">by Ukwebtools • Independent tool</div>
+      </div>
+    </div>
+    <div style="display:flex;gap:10px;flex-wrap:wrap">
+      <a class="btn" href="login.html">Log in</a>
+      <a class="btn primary" href="app.html">Open app</a>
+    </div>
+  </div>
+
+  <div class="hero">
+    <h1>Estimate profit. Assess listing risk. Stress-test margins.</h1>
+    <p>
+      Create an account to get <b>5-day free access</b>. After trial, unlock PRO with a <b>one-time purchase</b>.
+      No subscriptions.
+    </p>
+    <div style="display:flex;gap:10px;flex-wrap:wrap;margin-top:12px">
+      <a class="btn primary" href="login.html">Start free trial</a>
+      <a class="btn" id="buyBtn" href="#" target="_blank" rel="noopener">Buy PRO — one-time</a>
+      <span class="pill">Not affiliated with marketplaces</span>
+    </div>
+  </div>
+
+  <div class="grid">
+    <div class="card">
+      <div style="font-weight:900">What PRO unlocks</div>
+      <ul class="list">
+        <li><b>Profit + margin</b> estimates with fee presets and manual override</li>
+        <li><b>Listing risk signals</b> based on inputs (non-guaranteed)</li>
+        <li><b>Stress testing</b> for thin margins</li>
+        <li><b>Return sensitivity</b> estimate</li>
+        <li><b>Bulk scan</b> workflow (fast checks)</li>
+      </ul>
+      <div class="small" style="margin-top:10px">
+        Disclaimer: estimates only. Not financial/tax advice. Verify fees, shipping, taxes, and platform terms independently.
+        Platform names (if shown) are for reference only; no endorsement or affiliation is claimed.
+      </div>
+    </div>
+
+    <div class="card">
+      <div style="display:flex;justify-content:space-between;align-items:flex-end;gap:10px;flex-wrap:wrap">
+        <div>
+          <div style="font-weight:900">Ratings</div>
+          <div class="small" id="ratingSummary">Loading…</div>
+        </div>
+        <span class="tag" id="avgStars">—</span>
+      </div>
+
+      <div class="reviews" id="reviews"></div>
+
+      <div class="small" style="margin-top:10px">
+        Reviews shown here are <b>approved</b> submissions stored in Supabase.
+      </div>
+    </div>
+  </div>
+
+  <footer>
+    <div><b>Independent tool:</b> Not affiliated with or endorsed by any marketplace, platform, or payment provider.</div>
+    <div><b>Estimates only:</b> outputs depend on user inputs and assumptions; no profit guarantees.</div>
+  </footer>
+
+</div>
+
 <script type="module">
   import { createClient } from "https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/+esm";
 
@@ -14,24 +115,16 @@
   const SUPABASE_ANON = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InhzaWdzZnR2ZmtuZWZwZGZzeWFlIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NzAyNzY4NjksImV4cCI6MjA4NTg1Mjg2OX0.Jkkh9Jd46saYBVipN8bxbWhjmhG6mgaFgtTpirKUAWg";
 
   const GUMROAD_URL = "https://stonevia.gumroad.com/l/goddhg";
+  document.getElementById("buyBtn").href = GUMROAD_URL;
 
-  // Attach Buy Now button if it exists
-  const buyBtn = document.getElementById("buyBtn");
-  if (buyBtn) {
-    buyBtn.href = GUMROAD_URL;
-  }
-
-  // Supabase client
   const supabase = createClient(SUPABASE_URL, SUPABASE_ANON);
 
-  // Load approved reviews (if review container exists)
-  async function loadReviews() {
-    const reviewsBox = document.getElementById("reviews");
-    const ratingBox = document.getElementById("ratingSummary");
-    const avgStars = document.getElementById("avgStars");
+  function stars(n){
+    n = Math.max(0, Math.min(5, Math.round(n)));
+    return "★".repeat(n) + "☆".repeat(5-n);
+  }
 
-    if (!reviewsBox) return;
-
+  async function loadReviews(){
     const { data, error } = await supabase
       .from("reviews")
       .select("created_at,name,rating,category,message")
@@ -39,34 +132,40 @@
       .order("created_at", { ascending: false })
       .limit(6);
 
-    if (error || !data || data.length === 0) {
-      if (ratingBox) ratingBox.textContent = "No reviews yet.";
-      if (avgStars) avgStars.textContent = "—";
-      reviewsBox.innerHTML = "<div class='small'>No approved reviews yet.</div>";
+    const box = document.getElementById("reviews");
+    if (error){
+      document.getElementById("ratingSummary").textContent = "Could not load reviews.";
+      box.innerHTML = `<div class="small">Try again later.</div>`;
       return;
     }
 
-    const avg =
-      data.reduce((sum, r) => sum + r.rating, 0) / data.length;
+    if (!data || data.length === 0){
+      document.getElementById("ratingSummary").textContent = "No approved reviews yet.";
+      document.getElementById("avgStars").textContent = "—";
+      box.innerHTML = `<div class="small">Leave feedback inside the app.</div>`;
+      return;
+    }
 
-    if (ratingBox) ratingBox.textContent = "Average rating";
-    if (avgStars) avgStars.textContent = avg.toFixed(1) + " ★";
+    const avg = data.reduce((s,x)=>s+x.rating,0)/data.length;
+    document.getElementById("ratingSummary").textContent = `Average rating (approved reviews)`;
+    document.getElementById("avgStars").textContent = `${avg.toFixed(1)} ${stars(avg)}`;
 
-    reviewsBox.innerHTML = "";
-    data.forEach(r => {
+    box.innerHTML = "";
+    data.forEach(r=>{
       const div = document.createElement("div");
       div.className = "review";
       div.innerHTML = `
-        <div><strong>${"★".repeat(r.rating)}</strong></div>
-        <div class="small">${r.message}</div>
-        <div class="small">— ${r.name || "Anonymous"}</div>
+        <div class="meta">
+          <div class="small"><b>${stars(r.rating)}</b> <span class="tag">${r.category || "General"}</span></div>
+          <div class="small">${new Date(r.created_at).toLocaleDateString()}</div>
+        </div>
+        <div class="small" style="margin-top:8px"><b>${r.name || "Anonymous"}</b> — ${r.message}</div>
       `;
-      reviewsBox.appendChild(div);
+      box.appendChild(div);
     });
   }
 
   loadReviews();
 </script>
-
 </body>
 </html>
