--- a/app.html
+++ b/app.html
@@ -206,7 +206,8 @@
       </details>
 
       <div class="tiny" style="margin-top:12px">
-        <b>Safe-water disclaimer:</b> We do not claim official platform fees. Presets are editable examples. Outputs are estimates only.
+        <b>Disclaimer:</b> This tool provides estimates based on user inputs. Results are not guarantees and should not be considered financial, legal, or tax advice.
+
       </div>
     </div>
 
