--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
         <li><b>Bulk scan</b> workflow (fast checks)</li>
       </ul>
       <div class="small" style="margin-top:10px">
-        Disclaimer: estimates only. Not financial/tax advice. Verify fees, shipping, taxes, and platform terms independently.
+        <div><b>Disclaimer:</b> ProfitPilot provides estimates based on user-provided data. Results may vary and are not guaranteed. This tool does not provide financial, legal, or tax advice.</div>
+
         Platform names (if shown) are for reference only; no endorsement or affiliation is claimed.
       </div>
     </div>
