--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       <div class="reviews" id="reviews"></div>
 
       <div class="small" style="margin-top:10px">
-        Reviews shown here are <b>approved</b> submissions stored in Supabase.
+        Reviews are submitted by users and appear publicly. Abuse or spam may be removed.
       </div>
     </div>
   </div>
