--- a/app.html
+++ b/app.html
@@ -236,8 +236,8 @@
 
       <div class="divider"></div>
 
-      <div style="font-weight:900">Leave a review (moderated)</div>
-      <div class="tiny">Your review will appear publicly only after approval (spam protection).</div>
+      <div style="font-weight:900">Leave a review</div>
+      <div class="tiny">Your review will appear publicly after submission. Please be respectful — spam or abuse may be removed.</div>
 
       <label>Your rating</label>
       <div class="starsRow" id="starPicker">
