--- a/app.html
+++ b/app.html
@@ -237,7 +237,7 @@
       <div class="divider"></div>
 
       <div style="font-weight:900">Leave a review</div>
-      <div class="tiny">Your review will appear publicly after submission. Please be respectful — spam or abuse may be removed.</div>
+      <div class="tiny">Your review will appear publicly after submission. We reserve the right to remove spam or abusive content.</div>
 
       <label>Your rating</label>
       <div class="starsRow" id="starPicker">
