--- a/index.html
+++ b/index.html
@@ -30,6 +30,42 @@
     .card{background:var(--card);border:1px solid var(--line);border-radius:18px;padding:16px}
     .list{margin:10px 0 0;padding-left:16px;color:var(--muted);line-height:1.6}
     .small{font-size:12px;color:var(--muted);line-height:1.5}
+    <div class="grid" style="margin-top:16px">
+  <div class="card">
+    <h3>Not just a fee calculator</h3>
+    <p class="small">
+      ProfitPilot goes beyond basic fees by estimating margin impact, break-even pressure, and return sensitivity.
+    </p>
+  </div>
+
+  <div class="card">
+    <h3>Built for real decisions</h3>
+    <p class="small">
+      Designed for sellers who list often and need confidence before pricing, advertising, or scaling.
+    </p>
+  </div>
+
+  <div class="card">
+    <h3>Flexible & platform-independent</h3>
+    <p class="small">
+      Use editable presets or manual inputs. No platform lock-in. No official affiliation claims.
+    </p>
+  </div>
+
+  <div class="card">
+    <h3>Simple pricing</h3>
+    <p class="small">
+      One-time purchase. No subscriptions. No hidden limits.
+    </p>
+  </div>
+</div>
+<ul class="small" style="line-height:1.8;padding-left:16px">
+  <li>Unlimited calculations</li>
+  <li>Editable fee presets</li>
+  <li>Risk & margin insights</li>
+  <li>One-time payment (no subscription)</li>
+</ul>
+
     .reviews{display:grid;gap:10px;margin-top:10px}
     .review{border:1px solid var(--line);background:rgba(255,255,255,.03);border-radius:16px;padding:12px}
     .meta{display:flex;justify-content:space-between;gap:10px;flex-wrap:wrap}
