--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@
     </div>
     <div style="display:flex;gap:10px;flex-wrap:wrap">
       <a class="btn" href="login.html">Log in</a>
-      <a class="btn primary" href="app.html">Open app</a>
+      <a class="btn primary" href="app.html">Open app</a> 
+      <a class="btn" href="https://ukwebtools.com/">← Ukwebtools</a>
     </div>
   </div>
 
@@ -116,6 +117,7 @@
       </ul>
       <div class="small" style="margin-top:10px">
         <div><b>Disclaimer:</b> ProfitPilot provides estimates based on user-provided data. Results may vary and are not guaranteed. This tool does not provide financial, legal, or tax advice.</div>
+<div class="small">By using this tool you agree to <a href="https://ukwebtools.com/terms.html">Terms</a> and <a href="https://ukwebtools.com/privacy.html">Privacy</a>.</div>
 
         Platform names (if shown) are for reference only; no endorsement or affiliation is claimed.
       </div>
