--- a/login.html
+++ b/login.html
@@ -32,6 +32,9 @@
 
     <button class="btn primary" id="signup">Create account</button>
     <button class="btn" id="login">Log in</button>
+    <div class="small" style="margin-top:10px">
+  <a href="reset.html" style="color:#5eead4">Forgot password?</a>
+</div>
 
     <div class="small" id="msg">—</div>
     <div class="small"><a href="index.html" style="color:#5eead4">← Back to home</a></div>
