--- a/login.html
+++ b/login.html
@@ -4,18 +4,28 @@
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <title>Login — ProfitPilot</title>
+  <link rel="icon" href="https://ukwebtools.com/favicon.svg" type="image/svg+xml">
   <style>
     :root{--bg:#0b0f14;--card:#111826;--card2:#0e1521;--txt:#eaf0ff;--muted:#9aa7bd;--line:rgba(255,255,255,.08);--accent:#5eead4;}
     *{box-sizing:border-box}
     body{margin:0;font-family:system-ui;background:var(--bg);color:var(--txt)}
     .wrap{max-width:520px;margin:40px auto;padding:0 14px}
-    .card{background:var(--card);border:1px solid var(--line);border-radius:18px;padding:20px}
+    .card{
+      background:linear-gradient(180deg,rgba(94,234,212,.10),transparent 60%),var(--card);
+      border:1px solid var(--line);border-radius:18px;padding:20px
+    }
     h2{margin:0 0 10px}
-    input{width:100%;padding:12px;border-radius:14px;border:1px solid var(--line);background:var(--card2);color:var(--txt)}
+    input{width:100%;padding:12px;border-radius:14px;border:1px solid var(--line);background:var(--card2);color:var(--txt);outline:none}
+    input:focus{border-color:rgba(94,234,212,.35)}
     label{font-size:12px;color:var(--muted);margin-top:14px;display:block}
-    .btn{width:100%;margin-top:14px;padding:12px;border-radius:999px;border:1px solid rgba(255,255,255,.1);background:rgba(255,255,255,.03);color:var(--txt);cursor:pointer}
+    .btn{
+      width:100%;margin-top:14px;padding:12px;border-radius:999px;
+      border:1px solid rgba(255,255,255,.1);
+      background:rgba(255,255,255,.03);color:var(--txt);cursor:pointer
+    }
     .btn.primary{background:rgba(94,234,212,.12);border-color:rgba(94,234,212,.35)}
     .small{font-size:12px;color:var(--muted);margin-top:12px;line-height:1.5}
+    a{color:var(--accent);text-decoration:none}
   </style>
 </head>
 <body>
@@ -25,19 +35,23 @@
     <p class="small">Log in or create an account to start your 5-day free access.</p>
 
     <label>Email</label>
-    <input id="email" type="email" placeholder="you@example.com">
+    <input id="email" type="email" placeholder="you@example.com" autocomplete="email">
 
     <label>Password</label>
-    <input id="password" type="password" placeholder="••••••••">
+    <input id="password" type="password" placeholder="••••••••" autocomplete="current-password">
 
     <button class="btn primary" id="signup">Create account</button>
     <button class="btn" id="login">Log in</button>
+
     <div class="small" style="margin-top:10px">
-  <a href="reset.html" style="color:#5eead4">Forgot password?</a>
-</div>
+      <a href="reset.html">Forgot password?</a>
+    </div>
 
     <div class="small" id="msg">—</div>
-    <div class="small"><a href="index.html" style="color:#5eead4">← Back to home</a></div>
+
+    <div class="small" style="margin-top:10px">
+      <a href="index.html">← Back to home</a> • <a href="https://ukwebtools.com/">Ukwebtools</a>
+    </div>
   </div>
 </div>
 
@@ -48,32 +62,57 @@
   const SUPABASE_ANON = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InhzaWdzZnR2ZmtuZWZwZGZzeWFlIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NzAyNzY4NjksImV4cCI6MjA4NTg1Mjg2OX0.Jkkh9Jd46saYBVipN8bxbWhjmhG6mgaFgtTpirKUAWg";
 
   const supabase = createClient(SUPABASE_URL, SUPABASE_ANON);
+
   const msg = document.getElementById("msg");
+  const emailEl = document.getElementById("email");
+  const passwordEl = document.getElementById("password");
 
-  document.getElementById("signup").onclick = async () => {
-    msg.textContent = "Creating account…";
-    const { error } =  await supabase.auth.signUp({
-  email,
-  password,
-  options: {emailRedirectTo: "https://profitpilot.ukwebtools.com/login.html" }
-});
-    if (error) throw error;
-localStorage.setItem("pp_pending_email", email);
-location.href = "verify.html";
+  function setMsg(text){ msg.textContent = text; }
 
-    if (error) msg.textContent = error.message;
-    else msg.textContent = "Account created. You can now log in.";
-  };
+  document.getElementById("signup").addEventListener("click", async () => {
+    const email = emailEl.value.trim();
+    const password = passwordEl.value;
 
-  document.getElementById("login").onclick = async () => {
-    msg.textContent = "Logging in…";
-    const { error } = await supabase.auth.signInWithPassword({
-      email: email.value.trim(),
-      password: password.value
+    if (!email) { setMsg("Please enter your email."); return; }
+    if (!password || password.length < 8) { setMsg("Password must be at least 8 characters."); return; }
+
+    setMsg("Creating account…");
+
+    const { error } = await supabase.auth.signUp({
+      email,
+      password,
+      options: {
+        emailRedirectTo: "https://profitpilot.ukwebtools.com/login.html"
+      }
     });
-    if (error) msg.textContent = error.message;
-    else location.href = "app.html";
-  };
+
+    if (error) {
+      setMsg(error.message);
+      return;
+    }
+
+    localStorage.setItem("pp_pending_email", email);
+    location.href = "verify.html";
+  });
+
+  document.getElementById("login").addEventListener("click", async () => {
+    const email = emailEl.value.trim();
+    const password = passwordEl.value;
+
+    if (!email) { setMsg("Please enter your email."); return; }
+    if (!password) { setMsg("Please enter your password."); return; }
+
+    setMsg("Logging in…");
+
+    const { error } = await supabase.auth.signInWithPassword({ email, password });
+
+    if (error) {
+      setMsg(error.message);
+      return;
+    }
+
+    location.href = "app.html";
+  });
 </script>
 </body>
 </html>
